--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-deepposekit >= 0.3.9
+shapely == 1.7.1
+deepposekit == 0.3.9
 imgaug == 0.4.0
 open3d == 0.12.0
 opencv-python == 4.5.1.48
+pixellib == 0.5.6
