--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ opencv-python==4.5.1.48
 pixellib==0.5.6
 trimesh==3.9.8
 pyrender==0.1.45
-tensorflow==2.0.0
+tensorflow-gpu==2.0.0
 pyrealsense2
 labelme
