Ignore all model files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ segmentation/mask_rcnn_models/*.h5
 segmentation/mask_rcnn_models/old/*.h5
 segmentation/mask_rcnn_coco.h5
 models/segmentation/*.h5
+models/segmentation/*/*.h5
 
 seg_test/
 
