Get mesh paths directly from URDF

--- a/data/mesh_config.json
+++ b/data/mesh_config.json
@@ -1,68 +1,72 @@
 {
     "BASE": {
-        "file_name": "base_link.stl",
         "pose": [
             0,
             0,
             -0.330,
             0,
-            -1.57,
+            -1.5707963267948966,
             0
         ]
     },
     "S": {
-        "file_name": "link_s.stl",
         "pose": [
             0,
             0,
             -0.131,
             0,
             0,
-            -1.57
+            -1.5707963267948966
         ]
     },
     "L": {
-        "file_name": "link_l.stl",
         "pose": [
             0,
             0,
             0,
             0,
             0,
-            -1.57
+            -1.5707963267948966
         ]
     },
     "U": {
-        "file_name": "link_u.stl",
         "pose": [
             0,
             0,
             0,
             0,
             0,
-            -1.57
+            -1.5707963267948966
         ]
     },
     "R": {
-        "file_name": "link_r.stl",
         "pose": [
             -0.3335,
             0,
             0,
             0,
             0,
-            -1.57
+            -1.5707963267948966
         ]
     },
-    "BT": {
-        "file_name": "link_b.stl",
+    "B": {
         "pose": [
             0,
             0,
             0,
             0,
             0,
-            -1.57
+            -1.5707963267948966
+        ]
+    },
+    "T": {
+        "pose": [
+            0,
+            0,
+            0,
+            0,
+            0,
+            -1.5707963267948966
         ]
     }
 }
