Removed ambiguity between naming convention of 'joint' and 'link'

--- a/data/mesh_config.json
+++ b/data/mesh_config.json
@@ -1,5 +1,5 @@
 {
-    "BASE": {
+    "base_link": {
         "pose": [
             0,
             0,
@@ -9,7 +9,7 @@
             0
         ]
     },
-    "S": {
+    "link_s": {
         "pose": [
             0,
             0,
@@ -19,7 +19,7 @@
             -1.5707963267948966
         ]
     },
-    "L": {
+    "link_l": {
         "pose": [
             0,
             0,
@@ -29,7 +29,7 @@
             -1.5707963267948966
         ]
     },
-    "U": {
+    "link_u": {
         "pose": [
             0,
             0,
@@ -39,7 +39,7 @@
             -1.5707963267948966
         ]
     },
-    "R": {
+    "link_r": {
         "pose": [
             -0.3335,
             0,
@@ -49,7 +49,7 @@
             -1.5707963267948966
         ]
     },
-    "B": {
+    "link_b": {
         "pose": [
             0,
             0,
@@ -59,7 +59,7 @@
             -1.5707963267948966
         ]
     },
-    "T": {
+    "link_t": {
         "pose": [
             0,
             0,
