--- a/DeepPoseRobot.yml
+++ b/DeepPoseRobot.yml
@@ -3,22 +3,22 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - certifi=2020.12.5
-  - geos=3.9.1
-  - intel-openmp=2020.3
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - liblapack=3.9.0
-  - mkl=2020.4
-  - pip=20.3.3
-  - python=3.6.4
-  - python_abi=3.6
-  - setuptools=52.0.0
-  - shapely=1.7.1
-  - vc=14.2
-  - vs2015_runtime=14.27.29016
-  - wheel=0.36.2
-  - wincertstore=0.2
+  - certifi=2020.12.5=py36ha15d459_1
+  - geos=3.9.1=h39d44d4_0
+  - intel-openmp=2020.3=h57928b3_311
+  - libblas=3.9.0=8_mkl
+  - libcblas=3.9.0=8_mkl
+  - liblapack=3.9.0=8_mkl
+  - mkl=2020.4=hb70f87d_311
+  - pip=20.3.3=py36haa95532_0
+  - python=3.6.4=h0c2934d_3
+  - python_abi=3.6=1_cp36m
+  - setuptools=52.0.0=py36haa95532_0
+  - shapely=1.7.1=py36hd33d9d6_4
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - wincertstore=0.2=py36h7fe50ca_0
   - pip:
     - absl-py==0.11.0
     - argon2-cffi==20.1.0
@@ -40,7 +40,7 @@ dependencies:
     - entrypoints==0.3
     - flatbuffers==1.12
     - freetype-py==2.2.0
-    - gast==0.2.2
+    - gast==0.3.3
     - google-auth==1.27.0
     - google-auth-oauthlib==0.4.2
     - google-pasta==0.2.0
@@ -111,6 +111,7 @@ dependencies:
     - pyrealsense2==2.42.0.2849
     - pyrender==0.1.45
     - pyrsistent==0.17.3
+    - pysimplegui==4.38.0
     - python-dateutil==2.8.1
     - pytz==2021.1
     - pywavelets==1.1.1
@@ -125,14 +126,16 @@ dependencies:
     - rsa==4.7.2
     - scikit-image==0.17.2
     - scikit-learn==0.24.1
-    - scipy==1.5.4
+    - scipy==1.4.1
     - send2trash==1.5.0
     - six==1.15.0
     - sklearn==0.0
-    - tensorboard==2.0.2
+    - tensorboard==2.5.0
+    - tensorboard-data-server==0.6.0
     - tensorboard-plugin-wit==1.8.0
-    - tensorflow-estimator==2.0.1
-    - tensorflow-gpu==2.0.0
+    - tensorflow-estimator==2.4.0
+    - tensorflow-gpu==2.4.1
+    - tensorflow-gpu-estimator==2.3.0
     - termcolor==1.1.0
     - terminado==0.9.2
     - testpath==0.4.4
