--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 tensorflow-gpu==2.4.1
 scikit-learn
-shapely==1.7.1
 imgaug==0.4.0
 opencv-python==4.5.1.48
 pixellib==0.5.6
@@ -13,3 +12,4 @@ numpy==1.19.2
 tqdm
 psutil
 pandas
+pyopengl-accelerate
