Started implementing new model management.
Hit wall regarding ROI's being entrenched into all aspects of the code but no longer being needed.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ deprecated_segmentation/mask_rcnn_models/old/*.h5
 deprecated_segmentation/mask_rcnn_coco.h5
 models/segmentation/*.h5
 models/segmentation/*/*.h5
+models/*/*.h5
 output/projection_viz.avi
 
 seg_test/
