--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ examples/\.ipynb_checkpoints/
 examples/deepposekit-data
 data/datasets.json
 models/mask_rcnn_coco.h5
+output/projection_viz_set10.avi
