--- a/data/mesh_config.json
+++ b/data/mesh_config.json
@@ -1,72 +1,10 @@
 {
-    "base_link": {
-        "pose": [
-            0,
-            0,
-            -0.330,
-            0,
-            0,
-            0
-        ]
-    },
-    "link_s": {
-        "pose": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    },
-    "link_l": {
-        "pose": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    },
-    "link_u": {
-        "pose": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    },
-    "link_r": {
-        "pose": [
-            -0.405,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    },
-    "link_b": {
-        "pose": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    },
-    "link_t": {
-        "pose": [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
+    "mh5l": {
+        "base_link": [0, 0, -0.33, 0, 0, 0],
+        "link_1_s": [0, 0, 0, 0, 0, 0],
+        "link_2_l": [0, 0, 0, 0, 0, 0],
+        "link_3_u": [0, 0, 0, 0, 0, 0],
+        "link_4_r": [-0.405, 0, 0, 0, 0, 0],
+        "link_5_b": [0, 0, 0, 0, 0, 0]
     }
 }
