--- a/data/mesh_config.json
+++ b/data/mesh_config.json
@@ -6,5 +6,13 @@
         "link_3_u": [0, 0, 0, 0, 0, 0],
         "link_4_r": [-0.405, 0, 0, 0, 0, 0],
         "link_5_b": [0, 0, 0, 0, 0, 0]
+    },
+    "mh50": {
+        "mh50_base_link": [0, 0, -0.54, 0, 0, 0],
+        "mh50_link_1_s": [0, 0, 0, 0, 0, 0],
+        "mh50_link_2_l": [0, 0, 0, 0, 0, 0],
+        "mh50_link_3_u": [0, 0, 0, 0, 0, 0],
+        "mh50_link_4_r": [-0, -0.210, -1.025, 0, 0, 0],
+        "mh50_link_5_b": [0, 0, 0, 0, 0, 0]
     }
 }
