--- a/data/split_config.json
+++ b/data/split_config.json
@@ -1,3 +1,5 @@
 {
-    "set0": { "train": 0.7, "validate": 0.2, "ignore": 0.1 }
+    "set0": { "train": 0.7, "validate": 0.2, "ignore": 0.1 },
+    "set10": { "train": 0.8, "validate": 0.2, "ignore": -5.55112e-17 },
+    "set20": { "train": 0.7, "validate": 0.2, "ignore": 0.1 }
 }
