Fixed smartsweep err; Set20 (21) testing
Set21 has far lower performace than set10. This may be due to having a more shallow and varied background along with a larger effective envelope visible to the camera.

--- a/data/split_config.json
+++ b/data/split_config.json
@@ -2,5 +2,6 @@
     "set0": { "train": 0.6, "validate": 0.2, "ignore": 0.2 },
     "set10": { "train": 0.8, "validate": 0.2, "ignore": -5.55112e-17 },
     "set20": { "train": 0.3, "validate": 0.1, "ignore": 0.6 },
-    "set10_old_": { "train": 0.7, "validate": 0.2, "ignore": 0.1 }
+    "set10_old_": { "train": 0.7, "validate": 0.2, "ignore": 0.1 },
+    "set21": { "train": 0.4, "validate": 0.1, "ignore": 0.5 }
 }
