--- a/data/split_config.json
+++ b/data/split_config.json
@@ -5,5 +5,6 @@
     "set10_old_": { "train": 0.7, "validate": 0.2, "ignore": 0.1 },
     "set21": { "train": 0.8, "validate": 0.2, "ignore": -5.55112e-17 },
     "set30": { "train": 0.75, "validate": 0.2, "ignore": 0.05 },
-    "set40": { "train": 0.7, "validate": 0.2, "ignore": 0.1 }
+    "set40": { "train": 0.7, "validate": 0.2, "ignore": 0.1 },
+    null: { "train": 0.7, "validate": 0.2, "ignore": 0.1 }
 }
