--- a/data/split_config.json
+++ b/data/split_config.json
@@ -7,5 +7,5 @@
     "set30": { "train": 0.75, "validate": 0.2, "ignore": 0.05 },
     "set40": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 },
     "set50": { "train": 0.85, "validate": 0.15, "ignore": 2.77556e-17 },
-    "set63": { "train": 0.7, "validate": 0.2, "ignore": 0.1 }
+    "set63": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 }
 }
