--- a/data/split_config.json
+++ b/data/split_config.json
@@ -8,5 +8,6 @@
     "set40": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 },
     "set50": { "train": 0.85, "validate": 0.15, "ignore": 2.77556e-17 },
     "set63": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 },
-    "set70": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 }
+    "set70": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 },
+    "set80": { "train": 0.9, "validate": 0.1, "ignore": -2.77556e-17 }
 }
